# pyvtkjs

./: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.md  codecov.yml  install.json  package-lock.json  package.json  pyproject.toml  pytest.ini  pyvtkjs.json  tsconfig.json  webpack.config.js
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
examples/: introduction.ipynb
pyvtkjs/: __init__.py  _frontend.py  _version.py  example.py  vtkio.py  widget.py
pyvtkjs/nbextension/: __init__.py  extension.js
pyvtkjs/nbextension/static/: extension.js
pyvtkjs/tests/: conftest.py  test_example.py  test_nbextension_path.py
src/: extension.ts  index.ts  plugin.ts  version.ts  widget.ts
src/widgets/: base.ts  gen.ts  renderer.ts  utils.ts
